Final content for July 2013 newsletter.

--- a/pnsac/jul13/article_Feature1.tex
+++ b/pnsac/jul13/article_Feature1.tex
@@ -64,6 +64,17 @@ seemed to me to be a very imprecise way of testing a jet
 engine. Another lesson learned -- not everybody was trying to make me
 look foolish all the time.
 
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{bird_gun.eps}
+   %caption of the figure 
+   \caption*{\small \em A 1960s chicken gun as used at Hucknall.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:birdgun}
+\end{figure}
+
 The visits to the various R-R sites around Derby took several months
 to complete. I had to have a good reason to leave my office and go
 visiting, particularly as I was now working in a departmental
@@ -100,11 +111,12 @@ would be waiting for me. On this occasion I had the good sense to take
 my own car to the airport and did not get lost. I expected to find a
 plane waiting, painted in some sort of Rolls-Royce colours. Instead,
 after some questioning, I found out that I would be travelling on a
-small airline, called British Midland, that ran a daily service
-between the Derby and Glasgow factories. Far from being in some
-interesting plane connected with R-R, I found that our plane was an
-old DC3 which had seen better days.I duly got on the plane and was
-somewhat nervous flying on my first flight.
+small airline, called British Midland, which ran a service, mainly for
+R-R personnel, between the Derby East Midlands Airport, near Derby and
+Glasgow factories Airport. Far from being in some interesting plane
+connected with R-R, I found that our plane was an old DC3 which had
+seen better days.I duly got on the plane and was somewhat nervous
+flying on my first flight.
 
 An hour later we arrived in Scotland, also my first trip over the
 Border, and I spent the day being shown around the factories and
@@ -118,6 +130,9 @@ plane which was full. The discussion centred around the amount of
 cargo which could be taken on the flight. I was quite relieved to get
 back to Derby in one piece.
 
+In the next article I will describe how I worked hard to climb the
+hierarchy at R-R and learnt in an uncomfortable way some lessons on
+people management.
 
 
 \begin{footnotesize}
