--- a/pnsac/jul13/article_PresReport.tex
+++ b/pnsac/jul13/article_PresReport.tex
@@ -16,6 +16,18 @@ now developed a display format which is interesting to visitors.
 Canada Day was the only day this year when the plane was on display to
 the general public.
 
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{canadaday_visitor.eps}
+   %caption of the figure 
+   \caption*{\small \em Showing off the North Star on Canada Day -- an
+   impressed visitor examines the cockpit.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:canadaday}
+\end{figure}
+
 On June 27, in co-operation with the Museum, who hosted the event, we
 showed off the plane to a group of donors attending the Donor
 Appreciation Evening.  This was a successful evening which is likely
@@ -57,7 +69,7 @@ and the museums in general.
 
 With the initiatives above, we are hoping in the next few months to
 consolidate our position as an important organization working with the
-Aviation Museum
+Aviation Museum.
 
 
 \begin{footnotesize}
