--- a/pnsac/jul13/article_ProgReport.tex
+++ b/pnsac/jul13/article_ProgReport.tex
@@ -1,4 +1,3 @@
-
 % Template PNSAC newsletter - Article
 % Language: Latex
 %
@@ -6,163 +5,156 @@
 % Head
 
 \title{Project Manager's Progress Report}
-\subtitle{April 2013}
+\subtitle{July 2013}
 \author{Bruce Gemmill}
 
 \maketitle
 
-During the last three months we have continued working on our two top
-priorities -- Engine \#3 and the interior of the North Star.  Some of
-the external skin has also been polished.  Volunteers were also
-involved in preparing the North Star and Argus for an early move
-outside, to accommodate an exhibit in the Storage Wing.
+Looking back on the last ten years of restoration work, we have
+achieved a great deal, but much work still needs to be done.  Our
+volunteer workforce has slimmed down somewhat, but those who continue
+to work on the North Star have much to be proud of.
 
-\section{Engine and QEC}
-\label{sec:engines}
+\section{Nr 2 Engine}
+\label{sec:engines_2}
 
-The engine rebuild is nearing completion, with magnetos and a few
-other accessories to be installed.  The completed engine will soon be
-installed in the engine frame, then work will begin on the
-supercharger and intercooler.
+We reported last year that Engine Nr 2 was finished and installed on
+the aircraft in April.  The spinner was repainted after it was
+discovered that the paint did not stand up to the harsh outdoor
+environment.  The propeller and spinner were installed on the aircraft
+before it was moved outside early this year.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{engine3.eps}
-   %caption of the figure 
-   \caption*{\small \em North Star engine 3.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:engine3}
-\end{figure}
+\section{Nr 3 Engine}
+\label{sec:engines_3}
 
-
-The basic engine frame is back together.  The three radiator sections
-were cleaned and painted, then attached to the front of the frame.
-The rear cowl ring has been disassembled, and new mounting hardware is
-being fitted before the parts are painted and reassembled.  The front
-cowl assembly (radiator cover) has also been cleaned, repaired and
-polished, ready to install.  Other cowl panels will each be cleaned,
-repaired and polished, ready to install once the complete engine is in
-place.  Work is also underway on a host of pipes, cables, accessories
-and fittings needed to complete the assembly of the engine and QEC
-prior to installation on the aircraft.
-
-As mentioned, volunteers worked to prepare the North Star for an early
-move outside.  Besides installing windows and closing other openings
-for weather protection, propeller \#2 was installed on engine \#2,
-rather than keeping it stored in the hangar.
-
-\section{Fuselage and Crew Area}
-\label{empennage}
-
-The crew lounge and forward washroom are looking more finished,
-although much work still remains.  New Plexiglas windows were
-installed in the crew lounge, washroom and APU closet.  The water tank
-was installed in the ceiling, and the water lines hooked to the newly
-refurbished sink. 
- 
-The air scoop that supplied cold air to the Janitrol heaters was badly
-corroded and removed for repair.  This involved cutting away damaged
-aluminum and riveting carefully formed patches in place.  The assembly
-was primed, then riveted back in place over the crew lounge.  New
-insulation was installed in the ceiling, including a layer of heat
-resistant mica.  Some pipes and wires have been installed, and the
-heating ducts were cleaned and recovered with fabric.  These will be
-installed once the Janitrol heaters are in place.
-
-The new galley is almost complete.  After the original doors are
-repaired they will be attached to the new assembly, which can then be
-installed in the crew lounge, just behind the equipment rack.  New
-wiring legends were produced for the inside of the electrical
-cabinets.  These will be laminated before installation, to prevent
-deterioration from humidity.
-
-The ceiling and wall panels in the forward and rear belly compartments
-have been stencilled and installed.  The floor panels were badly
-scratched and in some cases stretched, due to the heavy load of
-baggage often carried in these compartments.  Each panel is being
-assessed, and several have already been remade.  These will be painted
-and stencilled, then installed later this spring.
-
-One of the new de-icing boots has been successfully manufactured.
-This will be an on-going project, as time permits.  Completed boots
-will be stored until other repair work on wings and stabilizers has
-been completed.
-
-Work has begun manufacturing a full set of troop seats for the
-aircraft.  A total of 33 seats will be sewn and fitted to new mounting
-frames.  A design has been completed and fabric work has started.
-Some of the fittings have also been made.  This work will continue for
-some time and all completed items will be stored until the main cabin
-has been repainted. 
-
+The third engine was disassembled and most of the major assemblies
+were cleaned, restored and re-installed over the past year.  This
+included the engine block, pistons, cylinder heads, valve train and
+crankcase.  The work has gone very quickly, thanks in part to a well
+organized and experienced engine shop crew, led by Garry Dupont.  A
+lot of detail work has gone into some small and intricate assemblies
+that no one will see once the engine is completely assembled, but that
+does not mean we don't take the time to get the job done right.  The
+built up engine was recently installed on the engine frame.
 
 \begin{figure}[htbp]
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{sink_vanity.eps}
+   \includegraphics[scale=0.5]{engine3_reduction_gear.eps}
    %caption of the figure 
-   \caption*{\small \em Forward vanity.}
+   \caption*{\small \em Garry Dupont inspecting engine nr 3's
+     reduction gearbox.}
    %label of the figure, which has to correspond to \ref{}:
-   \label{fig:vanity}
+   \label{fig:engine3gearbox}
 \end{figure}
 
-The forward washroom has most equipment returned, including the toilet
-and the window, minus the Plexiglas insert that is on order.
-Likewise, the vanity mirror and various fixtures were repainted and
-re-installed.  The door will not be installed until the new flooring
-is glued down, one of the last tasks in the crew area.
+Items still requiring restoration are the supercharger and
+intercooler, and the auxiliary drive gearbox.  As always, there are
+numerous pipes and hoses and fittings that also need attention.  The
+engine should be completed by the end of this year.
 
-The APU compartment, which had been converted to luggage and coat
-storage, has been re-assembled.  The power inverter and cabinet were
-re-installed, along with the luggage shelf and floor.
+\section{Engine Frame}
+\label{engineframe}
 
-% The heater and ducting has become a major item of work.  All the ducts
-% were removed and cleaned, but new woven fibreglass coverings will need
-% to be attached.  Material is on order.  The main air scoop that feeds
-% the heater was removed and found to be badly corroded.  This item is
-% being rebuilt and must be installed before the aircraft goes outside
-% this spring.
+The engine frame was completely disassembled, stripped of paint and
+oil, and then repainted and the main components reassembled on the QEC
+stand.  The three radiators (water, oil, and intercooler) were
+thoroughly cleaned and then repainted and installed.  The cowl support
+frame is currently being worked on, but some parts have been added to
+the engine frame, along with the fire detectors and fire suppression
+system pipes.  The large chin cowl and some of the lower cowls have
+been restored.  The top and side cowls still require extensive
+restoration.  This work is somewhat hampered by the small number of
+volunteers available to work on these items.
 
-% Work also continues on the floor, ceiling and wall panels from the
-% under floor belly compartment.  Some damaged panels may need to be
-% replaced.  Progress is also being made on the de-icing boots for the
-% wings
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{engine3_prop_cowl.eps}
+   %caption of the figure 
+   \caption*{\small \em John Thibert with the propeller cowl for
+     engine nr 3.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:engine3propcowl}
+\end{figure}
 
-% We made good progress on our plan to build a set of troop seats for
-% the aircraft.  Our appeal for donations was highly successful, and
-% most of the material needed for the seats has now been received.
-% Numerous fittings were manufactured and painted, and are stored until
-% the seats are ready to install. 
+
+\section{Crew Lounge, Galley,  and Forward Washroom}
+\label{crewlounge}
+
+Last spring we removed the equipment from the crew lounge, galley and
+forward washroom.  While the aircraft was outside these areas were
+cleaned, stripped of paint, then repainted.  The flooring was removed
+so the underfloor could be cleaned and primed.  There is some
+corrosion damage that must be repaired before new flooring can be
+installed.  Most items removed from these areas were restored over the
+winter.  This included the washroom door, toilet and washroom
+fittings, vanity sink and mirror, and the power inverter installed
+opposite the forward washroom.  The old galley was removed and
+inspected.  Due to heavy corrosion it was decided to build a
+completely new galley, using the old one as a template.  Only the
+original doors were retained.  The new galley is complete and will be
+stored until it can be installed in the crew lounge.
+
+The heaters had been removed from the ceiling in 2006 and fully
+restored, but the air ducts, fuel lines and intake and exhaust scoops
+required extensive restoration.  The air scoop was removed from the
+aircraft, repaired and re-installed.  The ducts were cleaned, repaired
+and new protective heat covers sewn over the old covering.  The water
+tank and fittings were removed, cleaned and a new cover sewn over the
+tank before installation.  New insulation was installed in the
+ceiling, then most heating ducts, cables and pipes were installed.
+Several fuel lines had been cut to allow removal of the Janitrol
+heaters, and these need to be replaced before the heaters can be
+installed.  The doors on the main electrical panel were restored and
+installed.  New legends were produced to indicate the circuit breaker
+and junction box connections.  These will be laminated and installed
+shortly.
+
+\section{Fuselage and Empennage}
+\label{empenage}
+
+The rear baggage compartment was cleaned and repainted.  Several floor
+panels had stretched and cracked, so new panels were fabricated.  All
+panels were stencilled with their respective part numbers before being
+installed.  The belly compartment hatch was removed, repaired, painted
+and installed.  Recently, the two battery elevators were removed, the
+compartment painted, and the elevators will be repainted and installed
+shortly.  Batteries were removed when the aircraft arrived at the
+museum.  There has been some discussion about obtaining new
+(non-functional) batteries to complete this item or work.
+
+Most of the main fuselage was polished while inside the storage
+hangar.  The underside and wings still require a lot of work.
+
+Work is progressing on fabricating a complete set of troop seats to
+fit up the interior of the main cabin, once this is restored.
 
 \section{Planned Restoration Work--2013}
 \label{sec:plannedwork}
 
-This summer we will replace all the items removed from the crew areas
-and continue the rebuild of engine \#3.
+Over the next year, we hope to have engine Nr 3 completed and engine
+Nr 4 removed.  We will complete the reassembly of the crew lounge and
+galley.  We then plan to work on the main cargo compartment, including
+refurbishing the main heater duct and other fittings, and removing
+floors to begin cleaning and repairs under the cargo floor.  We may
+yet get to work on the four engine nacelles.
 
-Sewing of the seat fabric will begin soon and will continue until all
-the fabric has been stitched together.  The frames will be
-manufactured later this year
+\section{Membership Report 2012--2013}
+\label{sec:membership}
 
-Next we expect to begin work to restore the main cabin.  This will
-require removal of the wood cargo floor for a thorough cleaning and
-inspection.  We expect to find some corrosion damage that will require
-repair. 
+In 2012 we recorded 100 paid members and provided lifetime memberships
+to two long serving volunteers and PNSAC Directors, Tim Timmins and
+Jim Riddoch.
 
-
-%% \begin{figure}[htbp]
-%%    \vspace{2em}
-%%    \centering
-%%    %name of the graphic, without the path AND in EPS format:
-%%    \includegraphics[scale=0.5]{MerlinCylinderHead.eps}
-%%    %caption of the figure 
-%%    \caption*{Richard Lodge and Garry Dupont, Merlin Cylinder Head}
-%%    %label of the figure, which has to correspond to \ref{}:
-%%    \label{fig:eng_one}
-%% \end{figure}
+So far in 2013, we have a total of 66 new or renewed memberships.
+This is slightly lower than the same time last year.  Normally, we
+would expect to receive a large number of new memberships during
+outside displays in the summer, but because of programming changes at
+the Museum, our ability to attract new members will be greatly
+reduced.
 
 \begin{footnotesize}
   \raggedleft PNSAC\\
