--- a/pnsac/jul13/article_SpecialEvents.tex
+++ b/pnsac/jul13/article_SpecialEvents.tex
@@ -62,7 +62,7 @@ make your day a ``Great Day at Loch March''.
 
 
 \section{Montreal Area Control Centre and the Bombardier Aerospace  --
-Friday Otober 4, 2013}
+Friday October 4, 2013}
 \label{sec:montreal}
 
 Our Third planned Special Event, on Friday October 4th, is a trip to
