--- a/pnsac/jul13/main_document.tex
+++ b/pnsac/jul13/main_document.tex
@@ -46,12 +46,21 @@
 \date{July 2013} 
 \titlepage
 
+
+% President's report ................................................. %
+
+% Report
+\begin{article}
+	\input{article_PresReport} 
+\end{article}
+
+
 % Progress report ................................................... %
 
 % Report
-%\begin{article}
-%	\input{article_ProgReport} 
-%\end{article}
+\begin{article}
+	\input{article_ProgReport} 
+\end{article}
 
 % Report
 % \begin{article}
@@ -60,7 +69,9 @@
 
 %\pagebreak
 
-% Features ........................................................... %
+% Features
+% ........................................................... %
+
 
 % Feature article
 
@@ -82,18 +93,8 @@
 %	\input{article_Feature3} 
 %\end{article}
 
-
-
 %\pagebreak
 
-% President's report ................................................. %
-
-% Report
-\begin{article}
-	\input{article_PresReport} 
-\end{article}
-
-%\pagebreak
 
 % Volunteer's corner ................................................. %
 
@@ -102,7 +103,17 @@
 % 	\input{article_Volunteer1} 
 % \end{article}
 
+
 % Recent events ...................................................... %
+
+%\begin{article}                 
+%	\input{article_RecentEvents}
+%\end{article}
+
+%\pagebreak
+
+
+%\vspace{35 mm}
 
 \begin{article}                 
 	\input{article_RecentEvents}
@@ -117,6 +128,7 @@
 
 \pagebreak
 
+
 % Forthcoming events ................................................. %
 
 \begin{article}
@@ -124,6 +136,7 @@
 \end{article}
 
 %\pagebreak
+
 
 % Board members/contact info ......................................... %
 
